--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- The following lines of code was adapted from https://www.youtube.com/watch?v=M_jAoZULcmk&feature=youtu.be, https://www.w3schools.com/html/html_links.asp¨, https://www.youtube.com/watch?v=S7zxHn6qhQA&feature=youtu.be, https://www.youtube.com/watch?v=M_jAoZULcmk & https://www.youtube.com/watch?v=yvqDrz2D_K8Accessed: 2025-01-31 -->
+<!-- The following lines of code was adapted from  https://www.youtube.com/watch?v=MaIA1RWZ2jU, https://www.youtube.com/watch?v=SgmNxE9lWcY, https://developer.mozilla.org/en-US/docs/Web/CSS/clip-path, https://www.w3schools.com/cssref/css3_pr_clip-path.php   2025-02-07 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,11 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
-     href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" 
-     rel="stylesheet">
-</head>
+     href=link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    
 
-<body>
+<body> 
+    <div class="star"></div>
+
  <header>
     <p id="logo"> My Portfolio </p>
     <nav> 
@@ -32,17 +33,28 @@
          <ul> 
     </nav>
 </header>
+
+<section>
+    <h1 class="heading-1">Welcome World!</h1>
+    <h3 class="heading-3">Welcome World!</h3>
+    <h4 class="heading-4">Welcome World!</h4>
+</section>
+
+
 <main>
     <img class ="main-img" src="images/img-seven.jpg" alt="My Portfolio">
-    <h1> AMINA MOHAMED  </h1>
-    <h2 class=" bold-text"> (ah-mee-nah) </h2>
+    <h2 class="bold-text"> amina mohamed</h2>
+    <h3 class="bold-text"> (ah-mee-nah) </h3>
     <p>I am a passionate graphic designer with a strong eye for detail and a love for creative storytelling. My ambition is to grow and evolve into a creative director, where I can lead impactful projects and bring bold ideas to life. Every design I create is driven by purpose, blending aesthetics with functionality. Thank you for visiting, and I hope my work inspires and resonates with you!</p>
 </main>
+
+
+<body>
+    
 
 <footer>
     <p>©️ My Portfolio 2025</p>
 </footer>
-</body>
 
 </html>
 
