--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
     <h2 class="bold-text"> amina mohamed</h2>
     <h3 class="bold-text"> (ah-mee-nah) </h3>
     <p>I am a passionate graphic designer with a strong eye for detail and a love for creative storytelling. My ambition is to grow and evolve into a creative director, where I can lead impactful projects and bring bold ideas to life. Every design I create is driven by purpose, blending aesthetics with functionality. Thank you for visiting, and I hope my work inspires and resonates with you!</p>
+    <button id="colorButton">Change Colors</button>
 </main>
 
-
-<body>
-    
 
 <footer>
     <p>©️ My Portfolio 2025</p>
 </footer>
 
+<script src="portfolio.js"></script>
+
+<body>
 </html>
 
